--- a/package.json
+++ b/package.json
@@ -2,15 +2,31 @@
   "name": "otus-css-vereshchagina",
   "version": "1.0.0",
   "description": "description",
-  "main": "index.js",
+  "main": "webpack.config.js",
   "scripts": {
+    "build-dev": "webpack -c webpack.config.js",
+    "build-prod": "webpack -c webpack.config.prod.js",
+    "start-dev": "webpack serve",
+    "start": "webpack serve --mode development -c webpack.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Elena Vereshchagina",
   "license": "ISC",
   "devDependencies": {
+    "babel-loader": "^9.1.3",
+    "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.8.1",
+    "html-loader": "^4.2.0",
+    "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
-    "prettier": "^3.0.3"
+    "mini-css-extract-plugin": "^2.7.6",
+    "prettier": "^3.0.3",
+    "sass": "^1.67.0",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
     "autoprefixer": "^10.4.15",
