--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-.Ds_Store
-node_modules
+# testing
+/coverage
+
+# production
+/build
+dist
+
+
+# misc
+.DS_Store
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+.vscode
