--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
   "author": "Elena Vereshchagina",
   "license": "ISC",
   "devDependencies": {
+    "at-rule-packer": "^0.4.1",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.8.1",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "http-server": "^14.1.1",
+    "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-deadcss": "^1.0.0",
+    "postcss-loader": "^7.3.3",
+    "postcss-preset-env": "^9.2.0",
     "prettier": "^3.0.3",
     "sass": "^1.69.3",
     "sass-loader": "^13.3.2",
